--- a/deno.json
+++ b/deno.json
@@ -27,7 +27,8 @@
     "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
     "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
     "$std/": "https://deno.land/std@0.216.0/",
-    "@openai/agents": "npm:@openai/agents@latest",
+    "zod": "https://esm.sh/zod@3.25.76",
+    "@openai/zod/v3": "https://esm.sh/zod@3.25.76",
     "openai": "npm:openai@^4.62.1"
   },
   "compilerOptions": {
